
message("in src CombinDbAccessServer..." )

#include_directories("../MKDbAccess")

gen_server(DCache CombinDbAccessServer)

add_dependencies(CombinDbAccessServer cache_comm)

target_link_libraries(CombinDbAccessServer mysqlclient)

#add_custom_target(tar_dbacc COMMAND sh ${PROJECT_SOURCE_DIR}/script/tar.sh ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} DCache ${DBACCESS_SERVER} )
#add_dependencies(tar_dbacc ${DBACCESS_SERVER})

set(TARGET "CombinDbAccessServer")
if(WIN32)
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.h c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.h c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.tars c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.tars c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.h c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.h c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.tars c:/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.tars c:/tarsproto/protocol/${APP}/${TARGET})\n")
elseif(APPLE)
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.h $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.h $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.tars $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.tars $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.h $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.h $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.tars $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.tars $ENV{HOME}/tarsproto/protocol/${APP}/${TARGET})\n")
elseif(UNIX)
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.h /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.h /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.tars /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/ProxyShare.tars /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.h /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.h /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E echo cp -rf ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.tars /home/tarsproto/${APP}/${TARGET})\n")
    FILE(APPEND ${RUN_RELEASE_COMMAND_FILE} "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/src/TarsComm/CacheShare.tars /home/tarsproto/${APP}/${TARGET})\n")
endif()